--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 wonder, peace, and love!</h2>
                 <h3>Gift is given by everyone... but on this eve i can give you <br>
                     Respect 👋!<br>
-                    Loyalty ✨!<br>
-                    Time ⏳! <br>
+                    Loyalty ✨!
+                    Time ⏳! 
                     Trust 🫂!<br>
-                    Priority 🫵!<br>
+                    Priority 🫵!
                 </h3>
                 </p>
                 <button class="close-btn" onclick="location.reload()">BACK</button>
@@ -114,5 +114,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
