--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <p>
                 <h1>✨ A Magical Christmas Eve ✨</h1>
-                <h2>May all your wishes comes true and bring a new light of <br>
+                <h2>May all your wishes comes true and bring a new light of
                 wonder, peace, and love!</h2>
                 
                 </p>
@@ -111,4 +111,5 @@
 
 
 </html>
+
 
