--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <div id="special-text">
 
                 <p>
-                <h2>✨ A Magical Christmas Eve ✨</h2>
-                <h3>May all your wishes comes true and bring a new light of
-                wonder, peace, and love!</h3>
+                <h2>✨ A Magical Eve ✨</h2>
+                <h3>May all your wishes comes true </h3>
                 
                 </p>
                 <button class="close-btn" onclick="location.reload()">BACK</button>
@@ -111,6 +110,7 @@
 
 
 </html>
+
 
 
 
